Modificacion del findAll, añadido los criterios y gestor de contenido XML

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.sql.init.mode=always
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 upload.delete=true
 upload.root-location=storage-dir
+## NEGOCIACION DE CONTENIDOS
+spring.mvc.contentnegotiation.favor-parameter=true
+spring.mvc.contentnegotiation.parameter-name=format
