Agregamos el modelo vista controlador

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,16 @@ spring.sql.init.mode=always
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 upload.delete=true
 upload.root-location=storage-dir
+## THYMELEAF
+spring.thymeleaf.enabled=true
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+## MONGO
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=funkos
+spring.data.mongodb.username=admin_funkos
+spring.data.mongodb.password=123
 ## NEGOCIACION DE CONTENIDOS
 spring.mvc.contentnegotiation.favor-parameter=true
 spring.mvc.contentnegotiation.parameter-name=format
