--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,36 +1,28 @@
-server.port=${PORT:3000}
+server.port=${API_PORT:3000}
+server.compression.enabled=${COMPRESS_ENABLED:true}
+server.compression.min-response-size=1024
 api.version=${API_VERSION:v1}
 server.error.include-message=always
-spring.datasource.url=jdbc:h2:mem:productosapirest
-spring.datasource.username=sa
-http=//localhost:{server.port}/h2-console
-spring.h2.console.enabled=false
-spring.jpa.show-sql=true
-spring.jpa.open-in-view=true
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.sql.init.mode=always
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-upload.delete=true
 upload.root-location=storage-dir
-## THYMELEAF
+upload.delete=true
+spring.jackson.mapper.default-view-inclusion=true
+spring.mvc.contentnegotiation.favor-parameter=true
+spring.mvc.contentnegotiation.parameter-name=format
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-## MONGO
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=funkos
-spring.data.mongodb.username=admin_funkos
-spring.data.mongodb.password=123
-## NEGOCIACION DE CONTENIDOS
-spring.mvc.contentnegotiation.favor-parameter=true
-spring.mvc.contentnegotiation.parameter-name=format
-##JWT Configuración de secreto y tiempo de token en segundos (86400 = 24 horas) pon el que quieras
+spring.thymeleaf.cache=false
+spring.messages.basename=messages
+spring.messages.cache-duration=-1
+spring.messages.encoding=UTF-8
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 jwt.secret=MeGustanLosPeinosdeLeganesPorqueSonGrandesYHermosos!
 jwt.expiration=86400
-## SSL
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store=classpath:cert/server_keystore.p12
 server.ssl.key-store-password=1234567
-spring.jackson.mapper.default-view-inclusion=true
+server.ssl.key-alias=serverKeyPair
+server.ssl.enabled=true
+spring.profiles.active=${PERFIL:dev}
